@@ -35,8 +35,8 @@ qed "Collect_le_Int_equals";
 
 
 (*Dual of the required property.  Converse inclusion fails.*)
-Goal "(UN i:{i. i < n}. A i) Int Compl (A n) <=  \
-\         (UN i:{i. i < n}. (A i) Int Compl (A(Suc i)))";
+Goal "(UN i:{i. i < n}. A i) Int -(A n) <=  \
+\         (UN i:{i. i < n}. (A i) Int -(A(Suc i)))";
 by (induct_tac "n" 1);
 by (Asm_simp_tac 1);
 by (simp_tac (simpset() addsimps [Collect_less_Suc_insert]) 1);
@@ -45,8 +45,8 @@ qed "UN_Int_Compl_subset";
 
 
 (*Converse inclusion fails.*)
-Goal "(INT i:{i. i < n}. Compl(A i) Un A (Suc i))  <= \
-\         (INT i:{i. i < n}. Compl(A i)) Un A n";
+Goal "(INT i:{i. i < n}. -A i Un A (Suc i))  <= \
+\         (INT i:{i. i < n}. -A i) Un A n";
 by (induct_tac "n" 1);
 by (Asm_simp_tac 1);
 by (asm_simp_tac (simpset() addsimps [Collect_less_Suc_insert]) 1);
@@ -55,15 +55,14 @@ qed "INT_Un_Compl_subset";
 
 
 (*Specialized rewriting*)
-Goal "A 0 Int (Compl (A n) Int \
-\                  (INT i:{i. i < n}. Compl(A i) Un A (Suc i))) = {}";
+Goal "A 0 Int (-(A n) Int (INT i:{i. i < n}. -A i Un A (Suc i))) = {}";
 by (blast_tac (claset() addIs [gr0I]
 		        addDs [impOfSubs INT_Un_Compl_subset]) 1);
 val lemma = result();
 
 (*Reverse direction makes it harder to invoke the ind hyp*)
 Goal "(INT i:{i. i <= n}. A i) = \
-\         A 0 Int (INT i:{i. i < n}. Compl(A i) Un A(Suc i))";
+\         A 0 Int (INT i:{i. i < n}. -A i Un A(Suc i))";
 by (induct_tac "n" 1);
 by (Asm_simp_tac 1);
 by (asm_simp_tac
@@ -73,7 +72,7 @@ by (asm_simp_tac
 qed "INT_le_equals_Int";
 
 Goal "(INT i:{i. i <= Suc n}. A i) = \
-\         A 0 Int (INT i:{i. i <= n}. Compl(A i) Un A(Suc i))";
+\         A 0 Int (INT i:{i. i <= n}. -A i Un A(Suc i))";
 by (simp_tac (simpset() addsimps [le_eq_less_Suc RS sym, 
 				  INT_le_equals_Int]) 1);
 qed "INT_le_Suc_equals_Int";
@@ -83,7 +82,7 @@ qed "INT_le_Suc_equals_Int";
 val [zeroprem, allprem] = goalw thy [stable_def]
     "[| constrains Acts (A 0 Int A (Suc n)) (A 0);  \
 \       ALL i:{i. i <= n}. constrains Acts (A(Suc i) Int A i) \
-\                                         (Compl(A i) Un A(Suc i)) |] \
+\                                         (-A i Un A(Suc i)) |] \
 \    ==> stable Acts (INT i:{i. i <= Suc n}. A i)";
 
 by (rtac ([zeroprem, allprem RS ball_constrains_INT] MRS 
